@@ -2,6 +2,15 @@
 
 export DH_GOLANG_BUILDPKG := github.com/GoogleCloudPlatform/guest-agent/google_guest_agent github.com/GoogleCloudPlatform/guest-agent/google_metadata_script_runner
 
+# use Go 1.18 as golang-any defaults to Go 1.13, which
+# doesn't have new features needed by this package.
+export PATH := /usr/lib/go-1.18/bin:$(PATH)
+
+# temporary build path; needed by newer Go.
+OUR_GOPATH := $(CURDIR)/.gopath
+export GOPATH := $(OUR_GOPATH)
+export GOCACHE := $(CURDIR)/.gocache
+
 %:
 	dh $@ --builddirectory=_build --buildsystem=golang --with=golang
 
