@@ -1,6 +1,7 @@
 google-guest-agent (20230330.00-0ubuntu1~20.04.0) focal; urgency=medium
 
   * No-change rebuild for Focal. (LP: #2016593)
+  * d/{rules,control}: Use Go 1.18 for build
 
  -- Utkarsh Gupta <utkarsh@ubuntu.com>  Wed, 26 Apr 2023 14:53:35 +0200
 
